[package]
name = "rustopencv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.66.0"
anyhow = "1.0"
image = "0.24.1"
ndarray = "0.15.4"
tesseract = "0.12.0"
tensorflow = "~0.18.0"
imageproc = "~0.23.0"
structopt = "~0.2.15"
openssl-sys = "0.9.75"
